--- a/recyclers-en.html
+++ b/recyclers-en.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <h1>Recyclers / Originator Portal</h1>
+    <h1>Recyclers / Originators Portal</h1>
     <p>Use this tool to generate the data and proof hash to send to your certifier (e.g., E-co.lab).</p>
     
     <div class="section">
