--- a/recyclers-pt_br.html
+++ b/recyclers-pt_br.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <h1>Portal dos Recicladores / Originador</h1>
+    <h1>Portal dos Recicladores / Originadores</h1>
     <p>Use esta ferramenta para gerar os dados e o hash da prova de reciclagem para enviar ao seu certificador (ex: E-co.lab).</p>
     
     <div class="section">
